--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,29 +6,31 @@
 .container {
   max-width: 500px;
   margin: 0 auto;
-  height: 100vh;
+  height: calc(100vh - 20px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
   user-select: none;
-  font-family: Georgia, serif;
+  padding: 5px;
 }
 .title {
+  font-family: 'Comic Sans MS', Arial;
 }
 .button {
   display: flex;
+  align-items: center;
+  justify-content: center;
   width: 200px;
   height: 30px;
   border-radius: 10px;
   border: 1px solid black;
-  align-items: center;
-  justify-content: space-evenly;
   font-size: 18px;
   background-color: #000;
   cursor: pointer;
   color: #fff;
-  font-family: inherit;
+  font-family: 'Comic Sans MS', Arial;
+  letter-spacing: 1px;
 }
 .button:active {
   position: relative;
