--- a/src/components/FieldComponent/style.module.css
+++ b/src/components/FieldComponent/style.module.css
@@ -6,3 +6,28 @@
   position: relative;
   transition: all 2s ease;
 }
+.wonDiv {
+  position: absolute;
+  color: #fff;
+  background-color: #000000aa;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.winerContainer {
+  width: 80%;
+  height: 50%;
+  background-color: green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Georgia, serif;
+  font-size: 24px;
+  text-align: center;
+  padding: 10px;
+}
+.steps {
+  color: blue;
+}
