--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  background-image: url('./assets/images/table.jpg');
+}
 .container {
   max-width: 500px;
   margin: 0 auto;
@@ -16,6 +19,7 @@
 }
 .title {
   font-family: 'Comic Sans MS', Arial;
+  color: #ddd;
 }
 .button {
   display: flex;
@@ -26,7 +30,6 @@
   border-radius: 10px;
   border: 1px solid black;
   font-size: 18px;
-  background-color: #000;
   cursor: pointer;
   color: #fff;
   font-family: 'Comic Sans MS', Arial;
