--- a/src/components/FieldComponent/style.module.css
+++ b/src/components/FieldComponent/style.module.css
@@ -4,7 +4,8 @@
   border: 1px solid black;
   background-color: #e5d6f6;
   position: relative;
-  transition: all 2s ease;
+  border: 5px solid #fff;
+  border-radius: 10px;
 }
 .wonDiv {
   position: absolute;
